Lab1/1_cholesky/out_cholesky_175435.err
cholesky.c: In function ‘cholesky_openmp’:
cholesky.c:137:13: error: initializer expression refers to iteration variable ‘i’
     #pragma omp parallel for collapse(2)
             ^~~
make: *** [Makefile:7: all] Error 1
